--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             window.xAppSdk = new xAppSdk()
         </script>
         <script data-consolejs-channel="d7b0c07f-52e4-4a7e-b47d-301704a4f66e" type="module" src="https://remotejs.com/agent/agent.js"></script>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Permanent Marker">
         <title>Vue / Vite Starter App</title>
 
         <style>
